syntax = "proto3";

package api.v1;

option go_package = "./v1";

message WaitRequest {
  string machine_id = 1;
}

message KeepPatientResponse {}

service Wait {
  rpc Wait(WaitRequest) returns (stream KeepPatientResponse);
}
